--- a/inventory.ini
+++ b/inventory.ini
@@ -3,4 +3,5 @@
 ; 172.27.17.70 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_ed25519
 ; 172.27.17.72 ansible_user=inf ansible_ssh_private_key_file=~/.ssh/id_ed25519
 
-35.222.30.92 ansible_user=divin ansible_ssh_private_key_file=~/.ssh/id_ed25519
+; 35.222.30.92 ansible_user=divin ansible_ssh_private_key_file=~/.ssh/id_ed25519
+34.135.32.99 ansible_user=divin ansible_ssh_private_key_file=~/.ssh/id_ed25519
